# SISYPHUS-VULN

./: README.md  SOURCES.txt  pyproject.toml  requirements.txt
dashboard/: app.py
dashboard/static/css/: styles.css
dashboard/static/js/: main.js
dashboard/templates/: index.html
ipynb_vuln_scanner.egg-info/: PKG-INFO  entry_points.txt  requires.txt
src/: ast_extractor.py  dependency_tree.py  ipynb_parser.py  main.py  osv_client.py  package_mapper.py  sbom_generator.py  scanner.py  syft_wrapper.py  version_resolver.py
tests/: test_ast_extractor.py  test_osv_client.py
tests/sample_notebooks/: pickles_vuln.ipynb  pickles_vuln.sbom.json  test_notebook.ipynb
