[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sisyphus-vuln"
version = "0.1.0"
description = "Detect vulnerabilities in Python dependencies from Jupyter Notebooks"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["security", "vulnerabilities", "jupyter", "notebook", "dependencies", "osv", "cve"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dashboard = [
    "flask>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "flask>=2.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
sisyphus-vuln = "src.main:main"

[project.urls]
Homepage = "https://github.com/example/ipynb-vuln-scanner"
Documentation = "https://github.com/example/ipynb-vuln-scanner#readme"
Repository = "https://github.com/example/ipynb-vuln-scanner"
Issues = "https://github.com/example/ipynb-vuln-scanner/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests that require network access (deselect with '-m \"not integration\"')",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
